# pin-bot

./: .env  Cargo.toml  sqlx-data.json
migrations/: 20230602123728_messages.sql
src/: main.rs
