[package]
name = "pin-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.5.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline", "migrate"] }
tokio = { version = "1.28.2", features = ["full"] }
